bootstrap/argocd/NetworkPolicy/argocd-application-controller-network-policy.yaml
apiVersion: networking.k8s.io/v1
ekn:
  gitOpsTarget: bootstrap
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: application-controller
    app.kubernetes.io/name: argocd-application-controller
    app.kubernetes.io/part-of: argocd
  name: argocd-application-controller-network-policy
  namespace: argocd
spec:
  ingress:
  - from:
    - namespaceSelector: {}
    ports:
    - port: 8082
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-application-controller
  policyTypes:
  - Ingress
