bootstrap/argocd/NetworkPolicy/argocd-applicationset-controller-network-policy.yaml
apiVersion: networking.k8s.io/v1
ekn:
  gitOpsTarget: bootstrap
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: applicationset-controller
    app.kubernetes.io/name: argocd-applicationset-controller
    app.kubernetes.io/part-of: argocd
  name: argocd-applicationset-controller-network-policy
  namespace: argocd
spec:
  ingress:
  - from:
    - namespaceSelector: {}
    ports:
    - port: 7000
      protocol: TCP
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-applicationset-controller
  policyTypes:
  - Ingress
