bootstrap/argocd/NetworkPolicy/argocd-server-network-policy.yaml
apiVersion: networking.k8s.io/v1
ekn:
  gitOpsTarget: bootstrap
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/part-of: argocd
  name: argocd-server-network-policy
  namespace: argocd
spec:
  ingress:
  - {}
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-server
  policyTypes:
  - Ingress
